# WeatherApp

./: .gitignore  Dockerfile  README.md  compose.yml  gunicorn.py  manage.py  pyproject.toml  requirements.txt
nginx/: weatherl.conf
templates/: base.html  error.html  header.html
weather/users_app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
weather/users_app/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_username.py
weather/users_app/templates/users/: login.html  signup.html
weather/weather/: asgi.py  urls.py  wsgi.py
weather/weather/settings/: base.py  selected_settings.py  tests.py
weather/weather_app/: admin.py  apps.py  exceptions.py  fields.py  forms.py  middlewares.py  models.py  service.py  tests.py  urls.py  views.py
weather/weather_app/dto/: weather_location_dto.py
weather/weather_app/migrations/: 0001_initial.py  0002_location_user.py  0003_alter_location_latitude_alter_location_longitude.py
weather/weather_app/static/weather_app/: style.css
weather/weather_app/templates/weather/: index.html  results.html
